<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="48sp"
        android:text=""
        android:padding="10dp"
        android:gravity="end|bottom"
        android:background="@color/light_grey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_weight="1"
        >

            <Button
                android:id="@+id/btnseven"
                android:text="@string/_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:onClick="OnDigit"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btneight"
                android:text="@string/_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="OnDigit"
                android:layout_margin="4dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnnine"
                android:text="@string/_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="OnDigit"
                android:layout_margin="4dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/divide"
                android:text="@string/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="OnOperator"
                android:layout_margin="4dp"
                android:layout_weight="1"
                />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnfour"
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnfive"
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnsix"
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnmultiply"
            android:text="@string/mul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnOperator"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnone"
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btntwo"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnthree"
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/minus"
            android:text="@string/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnOperator"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btndec"
            android:text="@string/dec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDec"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btnzero"
            android:text="@string/_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnclr"
            android:text="@string/clr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnClear"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnOperator"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/equal"
            android:text="@string/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="Onequal"
            android:layout_margin="4dp"
            android:layout_weight="1"
            />

    </LinearLayout>



</LinearLayout>